--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,9 @@
+feign.client.url = https://openexchangerates.org/api/
 
+app_id = 68ca311b22d24ca4a3ebe384ade51c73
+
+base = "USD"
+
+gif.service.url = https://api.giphy.com/v1/gifs/
+
+gif.api_key = LjfueDe9V0evRA2FgOJtNDwDMFMwIWzs
