--- a/build.gradle
+++ b/build.gradle
@@ -13,11 +13,21 @@ repositories {
 }
 
 dependencies {
+
+    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-thymeleaf'
+
+    implementation 'org.springframework.cloud:spring-cloud-starter-openfeign:3.1.3'
+
     implementation 'org.springframework.boot:spring-boot-starter-web'
+    implementation 'org.testng:testng:7.1.0'
     developmentOnly 'org.springframework.boot:spring-boot-devtools'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
+
+    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.2'
+    testImplementation 'org.junit.vintage:junit-vintage-engine:5.8.2'
+
 }
 
 tasks.named('test') {
-    useJUnitPlatform()
+     useJUnitPlatform()
 }
